restructure project files

--- a/steps/app/static/app/css/layout.css
+++ b/steps/app/static/app/css/layout.css
@@ -1606,3 +1606,11 @@ fieldset[disabled] .btn-theme {
 .registerteam h4{
   color: #fff;
 }
+
+
+/**** custom ******
+
+#myChart{
+  width: 400px !important;
+  height: 400px !important;
+}*/
