--- a/steps/app/templates/app/index.html
+++ b/steps/app/templates/app/index.html
@@ -10,12 +10,13 @@
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <meta content="steps" name="description"/>
   <link href="http://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <link href="{% static 'app/vendor/simple-line-icons/simple-line-icons.min.css' %}" rel="stylesheet" type="text/css"/>
-  <link href="{% static 'app/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"/>
-  <link href="{% static 'app/css/animate.css' %}" rel="stylesheet">
-  <link href="{% static 'app/vendor/swiper/css/swiper.min.css' %}" rel="stylesheet" type="text/css"/>
+  <link href="{% static 'app/css/font-awesome.min.css' %}" rel="stylesheet">
+  <link href="{% static 'app/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"/>
+  <link href="{% static 'app/css/animate.min.css' %}" rel="stylesheet">
+  <link href="{% static 'app/css/swiper.min.css' %}" rel="stylesheet" type="text/css"/>
   <link href="{% static 'app/css/layout.css' %}" rel="stylesheet" type="text/css"/>
+  <script src="{% static 'app/js/chart.min.js' %}" type="text/javascript"></script>
+
   <link rel="shortcut icon" href="favicon.ico"/>
   <link rel="stylesheet" href="{% static 'app/css/footer-distributed-with-address-and-phones.css' %}">
 </head>
@@ -149,6 +150,9 @@
 
         <div class="row">
           <!-- Latest Products -->
+
+          <canvas id="myChart" width="100" height="100"></canvas>
+          
           <div class="col-sm-4 sm-margin-b-50">
             <div class="margin-b-20">
               <img class="img-responsive" src="{% static 'app/img/970x647/01.jpg' %}" alt="Latest Products Image">
@@ -350,7 +354,7 @@
 
       <div>
         <i class="fa fa-envelope"></i>
-        <p><a href="mailto:nipun.gupta.3344@gmail.com">nipun.gupta.3344@gmail.com</a></p>
+        <p><a href="mailto:yell0wfl4shh@gmail.com">nipun.gupta.3344@gmail.com</a></p>
       </div>
 
     </div>
@@ -376,30 +380,61 @@
 
   </footer>
   <!--========== END FOOTER ==========-->
-
   <!-- Back To Top -->
   <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
 
   <!-- JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
+  <!-- chart.js scripts -->
+  <script type="text/javascript">
+    new Chart(document.getElementById("myChart"), {
+      type: 'doughnut',
+      data: {
+        labels: ["Africa", "Asia", "Europe", "Latin America", "North America"],
+        datasets: [
+          {
+            label: "Population (millions)",
+            backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9","#c45850"],
+            data: [2478,5267,734,784,433]
+          }
+        ]
+      },
+      options: {
+        responsive: true,
+        legend: {
+          position: 'top',
+        },
+        title: {
+          display: true,
+          text: 'Chart.js Doughnut Chart'
+        },
+        animation: {
+          animateScale: true,
+          animateRotate: true
+        }
+      }
+    });
+  </script>
+
   <!-- CORE PLUGINS -->
-  <script src="{% static 'app/vendor/jquery.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/vendor/jquery-migrate.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/vendor/bootstrap/js/bootstrap.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'app/js/jquery.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'app/js/jquery-migrate.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'app/js/bootstrap.min.js' %}" type="text/javascript"></script>
 
   <!-- PAGE LEVEL PLUGINS -->
-  <script src="{% static 'app/vendor/jquery.easing.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/vendor/jquery.back-to-top.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/vendor/jquery.smooth-scroll.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/vendor/jquery.wow.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/vendor/swiper/js/swiper.jquery.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/vendor/masonry/jquery.masonry.pkgd.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/vendor/masonry/imagesloaded.pkgd.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'app/js/jquery.easing.js' %}" type="text/javascript"></script>
+  <script src="{% static 'app/js/jquery.back-to-top.js' %}" type="text/javascript"></script>
+  <script src="{% static 'app/js/jquery.smooth-scroll.js' %}" type="text/javascript"></script>
+  <script src="{% static 'app/js/jquery.wow.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'app/js/swiper.jquery.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'app/js/jquery.masonry.pkgd.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'app/js/imagesloaded.pkgd.min.js' %}" type="text/javascript"></script>
 
   <!-- PAGE LEVEL SCRIPTS -->
-  <script src="{% static 'app/js/layout.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/js/components/wow.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/js/components/swiper.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/js/components/masonry.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'app/js/layout.js' %}" type="text/javascript"></script>
+  <script src="{% static 'app/js/wow.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'app/js/swiper.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'app/js/masonry.min.js' %}" type="text/javascript"></script>
+
 
 </body>
 <!-- END BODY -->
