--- a/steps/app/templates/app/dashboard.html
+++ b/steps/app/templates/app/dashboard.html
@@ -1,143 +1,173 @@
 <!DOCTYPE html>
 <html>
 <head>
+	{% load static %}
 	<title>S.T.E.P.S</title>
-	<link rel="stylesheet" type="text/css" href="./dashboard.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'app/css/dashboard.css' %}">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
- 	
- 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+	rel="stylesheet">
+	<link href="{% static 'app/css/font-awesome.min.css' %}" rel="stylesheet">
+	<link href="{% static 'app/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"/>
+	<link href="{% static 'app/css/animate.min.css' %}" rel="stylesheet">
+	<link href="{% static 'app/css/swiper.min.css' %}" rel="stylesheet" type="text/css"/>
+	<link href="{% static 'app/css/layout.css' %}" rel="stylesheet" type="text/css"/>
+	<script src="{% static 'app/js/chart.min.js' %}" type="text/javascript"></script>
 
 </head>
 <body>
-	<div class="hamburger">
-			<i class="material-icons md-light md-inactive">reorder</i>
-	</div>
+	<header class="header navbar-fixed-top">
+		<nav class="navbar" role="navigation">
+			<div class="container">
+				<div class="menu-container js_nav-item">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="toggle-icon"></span>
+					</button>
 
-	<div class="overlay-toggle">
-		<div class="overlay"></div>
-		<div class="overlay-options">
-			<div>
-				<ul>
-					<li><h3>Compare</h3></li>
-					<li><h3>Leader Board</h3></li>
-					<li><h3>Add Event</h3></li>
-					<li><h3>Logout</h3></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-
-	<div class="container row col-sm-12">
-			<div class="profile col-sm-2 mock_div">
-				<div class="profile-image"></div>
-				<div class="profile-data">
-					<h4>{{ Profile Name }}</h4>
-					<p>Some information about the profile</p>
-				</div>
-			</div>
-
-			<!--dashboard -->
-			<div class="dashboard col-sm-5 mock_div">
-				<h2>Incubators</h2>
-				<!-- incubator image cards here -->
-				<div class="incubators">
-					<div class="card " style="width:250px;" data-toggle="tooltip" title="View Profile">
-	  					<img class="card-img-top" src="./image/profile.jpg" alt="Card image">
-	  					<div class="card-body">
-	    					<h5 class="card-title">{{ Incubator Name }}</h5>
-	    					<p class="card-text">{{ Incubator desciption goes here  }}</p>
-	    				</div>
-					</div>
-
-					<div class="card " style="width:250px;" data-toggle="tooltip" title="View Profile">
-	  					<img class="card-img-top" src="./image/profile.jpg" alt="Card image">
-	  					<div class="card-body">
-	    					<h5 class="card-title">{{ Incubator Name }}</h5>
-	    					<p class="card-text">{{ Incubator desciption goes here  }}</p>
-	    				</div>
-					</div>
-
-					<div class="card " style="width:250px;" data-toggle="tooltip" title="View Profile">
-	  					<img class="card-img-top" src="./image/profile.jpg" alt="Card image">
-	  					<div class="card-body">
-	    					<h5 class="card-title">{{ Incubator Name }}</h5>
-	    					<p class="card-text">{{ Incubator desciption goes here  }}</p>
-	    				</div>
+					<div class="logo">
+						<a class="logo-wrap" href="#body">
+							<img class="logo-img logo-img-main" src="{% static 'app/img/logofinal.png' %}" alt="FlameOnePage Logo">
+							<img class="logo-img logo-img-active" src="{% static 'app/img/logofinal.png' %}" alt="FlameOnePage Dark Logo">
+						</a>
 					</div>
 				</div>
 
-				<hr>
+				<div class="collapse navbar-collapse nav-collapse">
 
-				<h2>StartUps</h2>
-				<!-- startup image card goes here -->
-				<div class="startups">
-					<div class="card " style="width:250px;" data-toggle="tooltip" title="View Profile">
-	  					<img class="card-img-top" src="./image/profile.jpg" alt="Card image">
-	  					<div class="card-body">
-	    					<h5 class="card-title">{{ Startup Name }}</h5>
-	    					<p class="card-text">{{ Startup desciption goes here  }}</p>
-	    				</div>
-					</div>
+          <!--div class="language-switcher">
+            <ul class="nav-lang">
+                        <li><a class="active" href="#">EN</a></li>
+              <li><a href="#">DE</a></li>
+            <li><a href="#">FR</a></li>
+            </ul>
+          </div--> 
 
-					<div class="card " style="width:250px;" data-toggle="tooltip" title="View Profile">
-	  					<img class="card-img-top" src="./image/profile.jpg" alt="Card image">
-	  					<div class="card-body">
-	    					<h5 class="card-title">{{ Startup Name }}</h5>
-	    					<p class="card-text">{{ Startup desciption goes here  }}</p>
-	    				</div>
-					</div>
+          <div class="menu-container">
+          	<ul class="nav navbar-nav navbar-nav-right">
+          		<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Home</a></li>
+          		{% if not user.is_authenticated %}
+          		<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Login</a></li>
+          		<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Register</a></li>
+          		{% endif %}
+          		<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Register as a Startup</a></li>
+          		<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">About Us</a></li>
+          	</ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <div class="container row col-sm-12">
+  	<div class="profile col-sm-2 mock_div">
+  		<div class="profile-image"></div>
+  		<div class="profile-data">
+  			<h4> Profile Name }}</h4>
+  			<p>Some information about the profile</p>
+  		</div>
+  	</div>
 
-					<div class="card " style="width:250px;" data-toggle="tooltip" title="View Profile">
-	  					<img class="card-img-top" src="./image/profile.jpg" alt="Card image">
-	  					<div class="card-body">
-	    					<h5 class="card-title">{{ Startup Name }}</h5>
-	    					<p class="card-text">{{ Startup desciption goes here  }}</p>
-	    				</div>
-					</div>
-				</div>
-			</div>
+  	<!--dashboard -->
+  	<div class="dashboard col-sm-5 mock_div">
+  		<h2>Incubators</h2>
+  		<!-- incubator image cards here -->
+  		<div class="incubators">
+  			<div class="card " style="width:250px;" data-toggle="tooltip" title="View Profile">
+  				<img class="card-img-top" src="{% static 'app/img/profile.jpg' %}" alt="Card image">
+  				<div class="card-body">
+  					<h5 class="card-title"> Incubator Name }}</h5>
+  					<p class="card-text">Incubator desciption goes here  }}</p>
+  				</div>
+  			</div>
 
-			<!-- newsfeed -->
-			<div class="newsfeed col-sm-3 mock_div">
-				<h2>NewsFeed</h2>
-				<div class="news">
-					<!-- newsfeed card goes here -->
-					<div class="newscard" data-toggle="tooltip" title=" Learn More">
-						<div class="newscard-image col-sm-offset-1" >
-						</div>
-						<div class="newscard-body col-sm-offset-1">
-							<h6 class="newscard-title">{{ Personilzed News Title }}</h6>
-							<p class="newscard-text">{{ description of the news }}</p>
-						</div>
-					</div>
-					<br>
+  			<div class="card " style="width:250px;" data-toggle="tooltip" title="View Profile">
+  				<img class="card-img-top" src="{% static 'app/img/profile.jpg' %}" alt="Card image">
+  				<div class="card-body">
+  					<h5 class="card-title">Incubator Name }}</h5>
+  					<p class="card-text">Incubator desciption goes here  }}</p>
+  				</div>
+  			</div>
 
-					<div class="newscard" data-toggle="tooltip" title="Learn More">
-						<div class="newscard-image col-sm-offset-1">
-						</div>
-						<div class="newscard-body col-sm-offset-1">
-							<h6 class="newscard-title">{{ Personilzed News Title }}</h6>
-							<p class="newscard-text">{{ description of the news }}</p>
-						</div>
-					</div>
-					<br>
+  			<div class="card " style="width:250px;" data-toggle="tooltip" title="View Profile">
+  				<img class="card-img-top" src="{% static 'app/img/profile.jpg' %}" alt="Card image">
+  				<div class="card-body">
+  					<h5 class="card-title">Incubator Name }}</h5>
+  					<p class="card-text"> Incubator desciption goes here  }}</p>
+  				</div>
+  			</div>
+  		</div>
 
-					<div class="newscard" data-toggle="tooltip" title="Learn More">
-						<div class="newscard-image col-sm-offset-1">
-						</div>
-						<div class="newscard-body col-sm-offset-1">
-							<h6 class="newscard-title">{{ Personilzed News Title }}</h6>
-							<p class="newscard-text">{{ description of the news }}</p>
-						</div>
-					</div>
-				</div>
-			</div>
-	</div>
+  		<hr>
+
+  		<h2>StartUps</h2>
+  		<!-- startup image card goes here -->
+  		<div class="startups">
+  			<div class="card " style="width:250px;" data-toggle="tooltip" title="View Profile">
+  				<img class="card-img-top" src="{% static 'app/img/profile.jpg' %}" alt="Card image">
+  				<div class="card-body">
+  					<h5 class="card-title"> Startup Name }}</h5>
+  					<p class="card-text"> Startup desciption goes here  }}</p>
+  				</div>
+  			</div>
+
+  			<div class="card " style="width:250px;" data-toggle="tooltip" title="View Profile">
+  				<img class="card-img-top" src="{% static 'app/img/profile.jpg' %}" alt="Card image">
+  				<div class="card-body">
+  					<h5 class="card-title"> Startup Name }}</h5>
+  					<p class="card-text"> Startup desciption goes here  }}</p>
+  				</div>
+  			</div>
+
+  			<div class="card " style="width:250px;" data-toggle="tooltip" title="View Profile">
+  				<img class="card-img-top" src="{% static 'app/img/profile.jpg' %}" alt="Card image">
+  				<div class="card-body">
+  					<h5 class="card-title">Startup Name }}</h5>
+  					<p class="card-text">Startup desciption goes here  }}</p>
+  				</div>
+  			</div>
+  		</div>
+  	</div>
+
+  	<!-- newsfeed -->
+  	<div class="newsfeed col-sm-3 mock_div">
+  		<h2>NewsFeed</h2>
+  		<div class="news">
+  			<!-- newsfeed card goes here -->
+  			<div class="newscard" data-toggle="tooltip" title=" Learn More">
+  				<div class="newscard-image col-sm-offset-1" >
+  				</div>
+  				<div class="newscard-body col-sm-offset-1">
+  					<h6 class="newscard-title"> Personilzed News Title }}</h6>
+  					<p class="newscard-text">description of the news }}</p>
+  				</div>
+  			</div>
+  			<br>
+
+  			<div class="newscard" data-toggle="tooltip" title="Learn More">
+  				<div class="newscard-image col-sm-offset-1">
+  				</div>
+  				<div class="newscard-body col-sm-offset-1">
+  					<h6 class="newscard-title">Personilzed News Title }}</h6>
+  					<p class="newscard-text">description of the news }}</p>
+  				</div>
+  			</div>
+  			<br>
+
+  			<div class="newscard" data-toggle="tooltip" title="Learn More">
+  				<div class="newscard-image col-sm-offset-1">
+  				</div>
+  				<div class="newscard-body col-sm-offset-1">
+  					<h6 class="newscard-title"> Personilzed News Title }}</h6>
+  					<p class="newscard-text">description of the news }}</p>
+  				</div>
+  			</div>
+  		</div>
+  	</div>
+  </div>
 </body>
-<script src="./dashboard.js"></script>
+<script src="{% static 'app/js/jquery.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'app/js/jquery-migrate.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'app/js/bootstrap.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'app/js/layout.js' %}" type="text/javascript"></script>
+
 
 </html>
