--- a/steps/app/templates/app/startup.html
+++ b/steps/app/templates/app/startup.html
@@ -14,6 +14,32 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByvunbP4yxz3UymqyLoZNLQH1FNXZCtY0&callback=initMap"
 	async defer></script>
+
+	<style type="text/css">
+		
+		.info-startup{
+			display: inline-flex !important;
+			justify-content: space-between !important;
+			margin-top: 50px;
+		}
+
+		.incubated{
+			width: 400px;
+		}
+		.info{
+			width: 400px;
+		}
+		.about-startup{
+			width: 500px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+		.about-input{
+			width: 350px;
+			margin-bottom: 20px;
+		}
+	</style>
 </head>
 
 <body>
@@ -48,11 +74,11 @@
         	<ul class="nav navbar-nav navbar-nav-right">
         		<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Home</a></li>
         		{% if not user.is_authenticated %}
-        		<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Login</a></li>
-        		<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Register</a></li>
+        		<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Compare</a></li>
+        		<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Leader Board</a></li>
         		{% endif %}
-        		<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Register as a Startup</a></li>
-        		<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">About Us</a></li>
+        		<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Add Event</a></li>
+        		<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Logout</a></li>
         	</ul>
         </div>
     </div>
@@ -61,16 +87,6 @@
 </header>
 <div class="overlay-toggle">
 	<div class="overlay"></div>
-	<div class="overlay-options">
-		<div>
-			<ul>
-				<li><h3>Option1</h3></li>
-				<li><h3>Option1</h3></li>
-				<li><h3>Option1</h3></li>
-				<li><h3>Option1</h3></li>
-			</ul>
-		</div>
-	</div>
 </div>
 <div class="profile">
 	<div class="cover-image col-sm-12">
@@ -79,7 +95,7 @@
 	</div>
 	<div class="activitybar col-sm-12 ">
 		<ul class="list-inline activitybar-links col-sm-offset-3">
-			<li><a href="#">Incubated Startups</a></li>
+			<li><a href="#">Members</a></li>
 			<li><a href="#">Fundings</a></li>
 			<li><a href="#">Activities</a></li>
 		</ul>
@@ -91,34 +107,41 @@
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 	</p>
 
-	<div class="col-sm-6 incubated col-sm-offset-1">
-		<h3 >Incubated StartUps</h3>
+<div class="info-startup">
+	<div class="col-sm-3 incubated ">
+		<h3 >Incubator</h3>
 		<div class="newscard">
 			<div class="newscard-image col-sm-offset-1" data-toggle="tooltip" title="View Profile">
 			</div>
 			<div class="newscard-body col-sm-offset-1">
-				<h5 class="newscard-title">Incubated StartUp Name</h5>
+				<h5 class="newscard-title">Incubator Name</h5>
 				<div>
 					<button class="btn-startup">Message</button>
-					<button class="btn-startup">View activity</button>
+					<button class="btn-startup">View activites</button>
 				</div>
-			</div>
-		</div>
-
-		<div class="newscard">
-			<div class="newscard-image col-sm-offset-1" data-toggle="tooltip" title="View Profile">
-			</div>
-			<div class="newscard-body col-sm-offset-1">
-				<h5 class="newscard-title">Incubated StartUp Name</h5>
-				<button class="btn-startup">Message</button>
-				<button class="btn-startup">View activity</button>
 			</div>
 		</div>
 	</div>
 
-	<div class="row col-sm-12 feed">
-		<div class="newsfeed col-sm-5">
+<hr>
 
+		<div class="about-startup">
+			<h3>About Startup_name</h3>
+			<input type="text" placeholder="Add about YourSelf" class="about-input">
+			<p class="col-sm-10 col-sm-offset-1">
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+			<br>
+			<p class="col-sm-10 col-sm-offset-1">
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+			<br>
+			<p class="col-sm-10 col-sm-offset-1">
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+
+		</div>
+		
 		<div class="info col-sm-4">
 			<div>
 				<h3 class="head-startup">Recommended Incubators for you : </h3>
@@ -176,9 +199,11 @@
 				</ul>
 			</div>
 		</div>
+</div>		
 	</div>
 
 </div>
+<h3 class="col-sm-offset-2">Incubators near you :</h3>
 <div id="map" class="col-sm-8 col-sm-offset-2"></div>
 </body>
 <script>
