--- a/steps/app/templates/app/index.html
+++ b/steps/app/templates/app/index.html
@@ -15,6 +15,7 @@
   <link href="{% static 'app/css/animate.min.css' %}" rel="stylesheet">
   <link href="{% static 'app/css/swiper.min.css' %}" rel="stylesheet" type="text/css"/>
   <link href="{% static 'app/css/layout.css' %}" rel="stylesheet" type="text/css"/>
+  <link href="{% static 'app/css/bot.css' %}" rel="stylesheet" type="text/css"/>
   <script src="{% static 'app/js/chart.min.js' %}" type="text/javascript"></script>
 
   <link rel="shortcut icon" href="favicon.ico"/>
@@ -332,6 +333,7 @@
 
     </div>
 
+<div class="chat_window"><div class="top_menu"><div class="buttons"><div class="button close"></div><div class="button minimize"></div><div class="button maximize"></div></div><div class="title">Chat</div></div><ul class="messages"></ul><div class="bottom_wrapper clearfix"><div class="message_input_wrapper"><input class="message_input" placeholder="Type your message here..." /></div><div class="send_message"><div class="icon"></div><div class="text">Send</div></div></div></div><div class="message_template"><li class="message"><div class="avatar"></div><div class="text_wrapper"><div class="text"></div></div></li></div>
     <div class="footer-right">
 
       <p class="footer-company-about">
@@ -459,7 +461,8 @@
   <script src="{% static 'app/js/imagesloaded.pkgd.min.js' %}" type="text/javascript"></script>
 
   <!-- PAGE LEVEL SCRIPTS -->
-  <script src="{% static 'app/js/layout.js' %}" type="text/javascript"></script>
+  <script src="{% static 'app/js/layout.js' %}" type="text/javascript"></script> 
+  <script src="{% static 'app/js/bot.js' %}" type="text/javascript"></script>
   <script src="{% static 'app/js/wow.min.js' %}" type="text/javascript"></script>
   <script src="{% static 'app/js/swiper.min.js' %}" type="text/javascript"></script>
   <script src="{% static 'app/js/masonry.min.js' %}" type="text/javascript"></script>
