--- a/steps/app/templates/app/index.html
+++ b/steps/app/templates/app/index.html
@@ -23,6 +23,7 @@
 
 
 <body id="body" data-spy="scroll" data-target=".header">
+  
 
   <header class="header navbar-fixed-top">
     <nav class="navbar" role="navigation">
@@ -298,7 +299,7 @@
 
     <div class="footer-left">
 
-      <h2><span>co</span>S<span>ax</span></h2>
+      <h2>STEPS</h2>
 
       <p class="footer-links">
         <a href="">Home</a>
@@ -317,17 +318,17 @@
 
       <div>
         <i class="fa fa-map-marker"></i>
-        <p><span>BITS-Pilani and IIT Roorkee</span></p>
+        <p><span>IIT Roorkee</span></p>
       </div>
 
       <div>
         <i class="fa fa-phone"></i>
-        <p>+918949447195</p>
+        <p>+917777777777</p>
       </div>
 
       <div>
         <i class="fa fa-envelope"></i>
-        <p><a href="mailto:yell0wfl4shh@gmail.com">nipun.gupta.3344@gmail.com</a></p>
+        <p><a href="mailto:yell0wfl4shh@gmail.com">yell0wfl4sh@gmail.com</a></p>
       </div>
 
     </div>
