--- a/steps/app/templates/app/comparator.html
+++ b/steps/app/templates/app/comparator.html
@@ -1,18 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
+	{% load static %}
 	<title>S.T.E.P.S</title>
-	<link rel="stylesheet" type="text/css" href="./comparator.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'app/css/comparator.css' %}">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
- 	
- 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+	rel="stylesheet">
+	<link href="{% static 'app/css/font-awesome.min.css' %}" rel="stylesheet">
+	<link href="{% static 'app/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"/>
+	<link href="{% static 'app/css/animate.min.css' %}" rel="stylesheet">
+	<link href="{% static 'app/css/swiper.min.css' %}" rel="stylesheet" type="text/css"/>
+	<link href="{% static 'app/css/layout.css' %}" rel="stylesheet" type="text/css"/>
+	<script src="{% static 'app/js/chart.min.js' %}" type="text/javascript"></script>
 
 </head>
 <body>
+
+  <header class="header navbar-fixed-top">
+    <nav class="navbar" role="navigation">
+      <div class="container">
+        <div class="menu-container js_nav-item">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="toggle-icon"></span>
+          </button>
+
+          <div class="logo">
+            <a class="logo-wrap" href="#body">
+              <img class="logo-img logo-img-main" src="{% static 'app/img/logofinal.png' %}" alt="FlameOnePage Logo">
+              <img class="logo-img logo-img-active" src="{% static 'app/img/logofinal.png' %}" alt="FlameOnePage Dark Logo">
+            </a>
+          </div>
+        </div>
+
+        <div class="collapse navbar-collapse nav-collapse">
+
+          <!--div class="language-switcher">
+            <ul class="nav-lang">
+                        <li><a class="active" href="#">EN</a></li>
+              <li><a href="#">DE</a></li>
+            <li><a href="#">FR</a></li>
+            </ul>
+          </div--> 
+
+          <div class="menu-container">
+            <ul class="nav navbar-nav navbar-nav-right">
+              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Home</a></li>
+              {% if not user.is_authenticated %}
+              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Compare</a></li>
+              {% endif %}
+              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Profile</a></li>
+              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Logout</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+<div class="container">
 <h2> Compare Startups</h2>
 <div class="comparator_name" style="display: flex;">
 	<input type="text" placeholder="Name of Incubator">
@@ -42,6 +88,7 @@
 		<li><a class="pricebutton" href="http://ergonomictrends.com/best-ergonomic-office-chairs-under-300-reviews/" target="_blank" rel="nofollow"><span class="icon-tag"></span> View Profile</a></li>
 	</ul>
 
+</div>
 </div>
 
 </body>
