--- a/steps/app/templates/app/comparator.html
+++ b/steps/app/templates/app/comparator.html
@@ -58,13 +58,16 @@
     </nav>
   </header>
 
-<div class="container">
+<div class="compare-container">
+<div class="header-container">	
 <h2> Compare Startups</h2>
 <div class="comparator_name" style="display: flex;">
-	<input type="text" placeholder="Name of Incubator">
-	<input type="text" placeholder="Name of Incubator">
+	<input type="text" placeholder="Name of Incubator1">
+	<input type="text" placeholder="Name of Incubator2">
 	<button>compare</button>
 </div>
+</div>
+
 <div class="pricingdiv">
 	<ul class="theplan">
 		<li class="title"><b>Incubator 1</b><br /> Name_Incubator</li>
@@ -90,6 +93,7 @@
 
 </div>
 </div>
+
 
 </body>
 </html>
