--- a/steps/app/static/app/css/comparator.css
+++ b/steps/app/static/app/css/comparator.css
@@ -105,3 +105,12 @@
 ul li{
   color: black;
 }
+.compare-container{
+  margin-top: 120px;
+}
+.header-container{
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
