content update in index.html (#10)
* Delete index.html

* Rename landingview.html to index.html

* Update index.html

* Update index.html

* landing page kaa html

--- a/steps/app/templates/app/index.html
+++ b/steps/app/templates/app/index.html
@@ -53,13 +53,13 @@
           
           <div class="menu-container">
             <ul class="nav navbar-nav navbar-nav-right">
-              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Home</a></li>
+              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Skip to Main Content</a></li>
               {% if not user.is_authenticated %}
               <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Login</a></li>
               <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Register</a></li>
               {% endif %}
-              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Register as a Startup</a></li>
-              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">About Us</a></li>
+              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Register as a user</a></li>
+              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Login</a></li>
             </ul>
           </div>
         </div>
@@ -81,10 +81,10 @@
         <div class="container">
           <div class="carousel-centered">
             <div class="margin-b-40">
-              <h1 class="carousel-title dd">A Flexible Startupville</h1>
-              <p class="color-white dd1">coSax is a marketplace for your professional skill-set and ideas<br/>An on-demand scalable workit-hub for entrepreneurs, smart-workforce and investors </p>
+              <h1 class="carousel-title dd">S.T.E.P.S</h1>
+              <p class="color-white dd1">Statup and Technical Entrepreneruship-cum-Symposium<br/>Helps high potential startups scale and get discovered by a network of incubators, entrepreneur and other influencers </p>
             </div>
-            <a href="" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Dashboard</a>
+            <a href="" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Register with us</a>
           </div>
         </div>
       </div>
@@ -93,10 +93,10 @@
         <div class="container">
           <div class="carousel-centered">
             <div class="margin-b-40">
-              <h2 class="carousel-title">Your Idea, Our Efforts</h2>
-              <p class="color-white"> We provide an online virtual bridge to connect your idea and your team<br/> Discuss startup ideas with entrepreneurial minds from all over the world and start now</p>
+              <h2 class="carousel-title">Want incubation? </h2>
+              <p class="color-white"> Directly pitch your product to experienced incubators<br/> Better market your products by utilizing the considerable infrastucture that the incubators have to offer</p>
             </div>
-            <a href="#" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Dashboard</a>
+            <a href="#" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Register with us</a>
           </div>
         </div>
       </div>
@@ -115,22 +115,22 @@
         <div class="masonry-grid-sizer col-xs-6 col-sm-6 col-md-1"></div>
         <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 sm-margin-b-30">
           <div class="margin-b-60">
-            <h2>Be a Worker.</h2>
-            <p>Anyone with a right skillset ranging from innovator to coder is open to join our task force. Choose the idea that suits you and get in the flow!</p>
+            <h2>Be a startup</h2>
+            <p>The best way to trigger the growth of an idea requires appropriate care and resistance. Join us and help your idea grow.</p>
           </div>
           <img class="full-width img-responsive wow fadeInUp" src="{% static 'app/img/500x500/01.jpg' %}" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
         </div>
         <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4">
           <div class="margin-b-60">
-            <h2>Be an Investor.</h2>
-            <p>The best gamble for your bucks is to invest into a innovative idea cum safe future of our world. Join us and help an idea in need.</p>  
+            <h2>Be an Incubator</h2>
+            <p>The best gamble for your seeding is to invest into an innovative idea cum safe future of our nation. Join us and connect with ideas of your interest.</p>  
           </div>
           <img class="full-width img-responsive wow fadeInUp" src="{% static 'app/img/500x500/02.jpg' %}" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".3s">
         </div>
         <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4">
           <div class=" margin-b-60">
-            <h2>Be a CEO.</h2>
-            <p>Pull out your wings because imagination is about to get real. Fill up some quick forms and get your idea moving fellas.</p>
+            <h2>Be a User</h2>
+            <p>Pull out your wings because imagination is about to get real. Participate in various events of startups & incubators listed in the feed</p>
           </div>
           <img class="full-width img-responsive wow fadeInUp" src="{% static 'app/img/500x500/03.jpg' %}" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".4s">
         </div>
@@ -168,7 +168,7 @@
           <div class="col-md-5 col-sm-5 md-margin-b-60">
             <div class="margin-t-50 margin-b-30">
               <h2>About us</h2>
-              <p>We set out as a two man show, from the premier BITS-Pilani, an idea with us and no more than that. Having been laughed off as mere dreamers, our determination to launch this platform strengthened by the influx of collaborators from IIT Roorkee. Our goal? Let no idea die due to a lack of support and resources. And this platform is a realisation of that dream.</p>
+              <p>Based in Bangalore, termed the Silicon Valley of India, S.T.E.P.S helps high-potential start-ups scale and get discovered by a network of incubators, entrepreneurs and a network of other influencers. We’ve guided hundreds of startups in building products and viable business models using our platforms, processes and people and are currently in the third year of our operation connecting startups with incubators that are happy to take them on.</p>
             </div>
             <a href="#" class="btn-theme btn-theme-sm btn-white-bg text-uppercase">More...</a>
           </div>
@@ -186,7 +186,7 @@
                   </div>
                   <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                     <div class="panel-body">
-                      coSax provides an online platform for the young entrepreneurial talents to share their idea,team up with people wo are excited about what you share and start your own venture.We believe that the young entrepreneurs have million dollar idea and those shouldn't die because of lack of resources.
+                      We aim to provide a platform for fledgling startups to connect with experienced incubators in order to be able to better market their products by utilizing the considerable infrastructure that the incubators have to offer. It also helps the incubators better decide from amongst the vast number of choices that they are presented with so that they can forge a partnership that could be mutually beneficial to both the involved parties. 
                     </div>
                   </div>
                 </div>
@@ -200,7 +200,7 @@
                   </div>
                   <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                     <div class="panel-body">
-                      We are a bunch of young entrepreneurs from BITS Pilani and IIT Roorkee who believe that there are many like us who have brilliant ideas to make this world a better place to live in. We believe that an idea is only good if it comes out and gets executed well. Therefore we are here to provide opportunity to every entrepreneur to come up with an idea and find like minded people to make it big.
+                      We are a bunch of sophomores from IIT Roorkee who believe that there are many like us who have brilliant ideas to make this world a better place to live in. We believe that incuatinbg a startup is very similar to raising a baby, requiring a lot of care and assistance to ease the “growing” pains, and hence we provide the best incubators for your fledgling organization
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                   </div>
                   <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                     <div class="panel-body">
-                      Well it is simple, we will provide you with all the resources be it expert advice or investors to help you all the way through your startup journey. Moreover you are teaming up with people who share the same interests as yours so there is no looking back. Come here,get inspired from the crowd and start your own venture.
+                      Well it is simple, this is the only platform till date which directly helps you interact with the incubators and meet the requirements a startup has. If this does not convince you, ask any of our successful 1200 startups which have found the perfect incubators and are well on their way to becoming successful companies in their own right.
                     </div>
                   </div>
                 </div>
