--- a/steps/app/templates/app/index.html
+++ b/steps/app/templates/app/index.html
@@ -333,7 +333,13 @@
 
     </div>
 
-<div class="chat_window"><div class="top_menu"><div class="buttons"><div class="button close"></div><div class="button minimize"></div><div class="button maximize"></div></div><div class="title">Chat</div></div><ul class="messages"></ul><div class="bottom_wrapper clearfix"><div class="message_input_wrapper"><input class="message_input" placeholder="Type your message here..." /></div><div class="send_message"><div class="icon"></div><div class="text">Send</div></div></div></div><div class="message_template"><li class="message"><div class="avatar"></div><div class="text_wrapper"><div class="text"></div></div></li></div>
+<div class="giffy-container">
+  <img src="https://media.giphy.com/media/adCM22G9lWT9m/source.gif">
+</div>
+<div class="bot-container">
+<div class="chat_window"><div class="top_menu"><div class="buttons"><div class="button close btn-close"></div></div><div class="title">Chat</div></div><ul class="messages"></ul><div class="bottom_wrapper clearfix"><div class="message_input_wrapper"><input class="message_input" placeholder="Type your message here..." /></div><div class="send_message"><div class="icon"></div><div class="text">Send</div></div></div></div><div class="message_template"><li class="message"><div class="avatar"></div><div class="text_wrapper"><div class="text"></div></div></li></div>
+</div>    
+
     <div class="footer-right">
 
       <p class="footer-company-about">
@@ -446,6 +452,7 @@
     });
   </script>
 
+
   <!-- CORE PLUGINS -->
   <script src="{% static 'app/js/jquery.min.js' %}" type="text/javascript"></script>
   <script src="{% static 'app/js/jquery-migrate.min.js' %}" type="text/javascript"></script>
@@ -469,5 +476,19 @@
 
 
 </body>
+
+  <script>
+    $(document).ready(function(){
+      $('.giffy-container').click(function(){
+        $('.bot-container').show();
+        $('.giffy-container').hide();
+      });
+
+      $('.btn-close').click(function(){
+        $('.bot-container').hide();
+        $('.giffy-container').show();
+      });
+    });
+  </script>
 <!-- END BODY -->
 </html>
