--- a/steps/app/templates/app/index.html
+++ b/steps/app/templates/app/index.html
@@ -254,7 +254,7 @@
                 <i class="service-icon icon-chemistry"></i>
               </div>
               <div class="service-info">
-                <h3>Create a team</h3>
+                <h3>Register a team</h3>
                 <p class="margin-b-5">Upload your ideas here.</p>
               </div>
               <a href="#" class="content-wrapper-link"></a>    
@@ -266,8 +266,8 @@
                 <i class="service-icon color-white icon-screen-tablet"></i>
               </div>
               <div class="service-info">
-                <h3 class="color-white">Explore Ideas</h3>
-                <p class="color-white margin-b-5">View from the range of diverse ideas</p>
+                <h3 class="color-white">Explore Incubators</h3>
+                <p class="color-white margin-b-5">View from the range of diverse oppurtunities</p>
               </div>
               <a href="#" class="content-wrapper-link"></a>    
             </div>
@@ -278,8 +278,8 @@
                 <i class="service-icon icon-badge"></i>
               </div>
               <div class="service-info">
-                <h3>Join a team</h3>
-                <p class="margin-b-5">Find a suitable team to be a part of</p>
+                <h3>Know more about S.T.E.P.S</h3>
+                <p class="margin-b-5">Know about the idea behind S.T.E.P.S</p>
               </div>
               <a href="#" class="content-wrapper-link"></a>    
             </div>
@@ -299,8 +299,6 @@
 
     <div class="footer-left">
 
-      <h2><span>co</span>S<span>ax</span></h2>
-
       <p class="footer-links">
         <a href="">Home</a>
         ·
@@ -318,17 +316,17 @@
 
       <div>
         <i class="fa fa-map-marker"></i>
-        <p><span>BITS-Pilani and IIT Roorkee</span></p>
+        <p><span>IIT Roorkee</span></p>
       </div>
 
       <div>
         <i class="fa fa-phone"></i>
-        <p>+918949447195</p>
+        <p>+919729663866</p>
       </div>
 
       <div>
         <i class="fa fa-envelope"></i>
-        <p><a href="mailto:yell0wfl4shh@gmail.com">nipun.gupta.3344@gmail.com</a></p>
+        <p><a href="mailto:yell0wfl4shh@gmail.com">yell0wfl4shh@gmail.com</a></p>
       </div>
 
     </div>
@@ -344,7 +342,7 @@
 
       <p class="footer-company-about">
         <span>About the company</span>
-        coSax is a marketplace for your professional skill-set and ideas
+        S.T.E.P.S is a marketplace for your professional skill-set and ideas
         .An on-demand scalable workit-hub for entrepreneurs, smart-workforce and investors 
       </p>
 
