--- a/steps/app/static/app/css/comparator.css
+++ b/steps/app/static/app/css/comparator.css
@@ -1,3 +1,6 @@
+li a{
+  color: #D3D3D3 !important;
+}
 .pricingdiv{
   display: flex;
   flex-wrap: wrap;
@@ -18,7 +21,8 @@
   margin-top: 50px;
   margin-right: 20px; /* spacing between tables */
   margin-bottom: 1em;
-  border: 1px solid gray;
+  border-radius:2px;
+  box-shadow:  0 2px 4px rgba(0,0,0,0.2), 0 -1px 0px rgba(0,0,0,0.02);
   transition: all .5s;
 }
 
